<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joelc.proyectosaram.RegistrarMonitorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewRegistrarMonitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hapticFeedbackEnabled="false"
            android:text="@string/lbl_reg_monitor"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="40dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_Cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewRegistrarMonitor"
            android:layout_marginTop="10dp"
            android:textSize="14dp">

            <EditText
                android:id="@+id/txt_cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_cedula"
                android:textSize="14dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/til_Cedula"
            android:layout_marginTop="10dp"
            android:textSize="14dp">

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nombre"
                android:textSize="14dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/til_nombre"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:textSize="14dp">

            <EditText
                android:id="@+id/txt_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_usuario"
                android:textSize="14dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/til_usuario"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:textSize="14dp">

            <EditText
                android:id="@+id/txt_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_telefono"
                android:textSize="14dp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textViewSemestre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/til_telefono"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_semestre"
            android:textSize="14dp" />

        <Spinner
            android:id="@+id/spinnerSemestre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewSemestre"
            android:layout_marginTop="10dp"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textViewLineaMonitoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinnerSemestre"
            android:layout_marginTop="10dp"
            android:text="@string/txt_linea_monitoria"
            android:textSize="14dp" />

        <Spinner
            android:id="@+id/spinnerLineaMonitoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewLineaMonitoria"
            android:layout_marginTop="10dp"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textViewLugarAsesoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinnerLineaMonitoria"
            android:layout_marginTop="10dp"
            android:text="@string/txt_lugar_asesoria"
            android:textSize="14dp" />

        <Spinner
            android:id="@+id/spinnerLugarAsesoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewLugarAsesoria"
            android:layout_marginTop="10dp"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_update_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerLugarAsesoria"
            android:contentDescription="@string/ic_upload"
            android:text="@string/lbl_subir_foto"
            android:layout_marginTop="10dp"
            android:drawableLeft="@mipmap/ic_launcher_update" />

        <Button
            android:id="@+id/btn_siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_update_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_siguiente"
            android:textSize="14dp"/>

    </RelativeLayout>

</ScrollView>
